libs/config/tests/errors/ce3_duplicate_property_shadow_property/stdout.ansi
[0m[1m[38;5;9merror[CE3][0m[1m: property was defined more than once[0m
  [0m[34m┌─[0m source.hpp:3:11
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m     thing = 1;
  [0m[34m│[0m     [0m[34m-----[0m [0m[34malso defined here[0m
[0m[34m3[0m [0m[34m│[0m     class [0m[31mthing[0m {
  [0m[34m│[0m           [0m[31m^^^^^[0m [0m[31mduplicate property[0m

